--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "card-react",
   "version": "0.1.0",
+  "homepage": "https://rebecca-xm.github.io/card-react/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
